# url_shortener

./: .gitignore  Cargo.toml  README.md  schema.sql  short_url.db  urls.db
src/: database.rs  db.rs  handlers.rs  main.rs  models.rs
