[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rocket_cors = "0.6.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = "1.36.0"
